--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "en-US"
+locale                   : "Hong Kong"
 site_theme               : "default"
-title                    : "Your Name / Site Title"
+title                    : "Taoyong Cui's Personal Homepage"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Taoyong Cui"
 description              : &description "personal description"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -23,11 +23,11 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Taoyong Cui"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Ph.D. student, CSE, MMLab, The Chinese University of Hong Kong"
   location         : "Earth"
-  employer         : "Red Brick University"
+  employer         : "CUHK"
   uri              : # URL
   email            : "none@example.org" 
 
