--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   name             : "Taoyong Cui"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. student, CSE, MMLab, The Chinese University of Hong Kong"
-  location         : "Earth"
+  location         : "Hong Kong"
   employer         : "CUHK"
   uri              : # URL
   email            : #"none@example.org" 
