--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Personal Homepage"
 title_separator          : "-"
 name                     : &name "Taoyong Cui"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://taoyongcui.github.io/
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "taoyongcui.github.io"
 
