--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "taoyongcui.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Taoyong Cui"
+  name             : "Taoyong Cui (崔涛镛)"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. student, CSE, MMLab, The Chinese University of Hong Kong"
   location         : "Hong Kong"
