--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "Hong Kong"
   employer         : "CUHK"
   uri              : # URL
-  email            : #"none@example.org" 
+  email            : "cty21@tsinghua.org.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
